...
        return 'Target';
      case Role.risk:
        return 'Risk';
      case Role.ident:
        return 'Ident';
      case Role.ignore:
        return 'Ignore';
      default:
        return '';
    }
  }
}

...
