...
final List<Map<String, dynamic>> exploreTabs = [
  {
    'title': 'Summary',
    'widget': const SummaryTab(),
  },
  {
    'title': 'Visual',
    'widget': const VisualTab(),
  },
  {
    'title': 'Missing',
    'widget': const MissingTab(),
  },
...
