...
    'nnet': '''

    A basic neural network with a single hidden layer.
    Suitable for simple tasks and small datasets.

    ''',
    'neuralnet': '''

    Supports multiple layers, ideal for complex patterns.
    Commonly used for deeper architectures.

    ''',
  };
...
        configTopGap,
        Row(
          spacing: configWidgetSpace,
          children: [
            configLeftGap,
            ActivityButton(
              key: const Key('Build Neural Network'),
              tooltip: '''

              **Build**

              Tap here to build a Neural Network model using the
              parameter values set here.
...
              ''',
              label: 'Skip',
              provider: neuralSkipProvider,
              enabled: algorithm == 'nnet',
            ),
            LabelledCheckbox(
              key: const Key('Neural Ignore Categoric'),
              tooltip: '''

              **Ignore Categoirc**

              Build the model ignoring the categoric
              variables. Categoric variables are handled by the neural net
...
